@@ -128,8 +128,8 @@
   412                         = Precondition Failed             ;request was unsuccessful because one of the client's conditions was not met
   411                         = Length Required                 ;method requires a length specification
   413                         = Request Entity Too Large        ;request exceeds allowable number of characters
-  416                         = Range Not Satisfiable           ;request for an invalid range
   415                         = Unsupported Media Type          ;server does not support the request content (Content-Type/Conten-Encoding)
+  416                         = Range Not Satisfiable           ;request for an invalid range
   424                         = Method Failure                  ;method failed
 
   500                         = Internal Server Error           ;internal server error
